optimize foreach loops to use List instead of ArrayList